css/test-css.css
html, body {
  margin: 0 !important;
  padding: 0 !important;
  position: relative;
  background-color: white;
  font-size: 16pt;
  width: 100% !important;
  display: inline-block;
}

hr {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: -20px;
}

img {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-right: 25px !important;
}

/****************
*    Header     *
****************/

/* CSS for RRAIN logo on header */
#index-header-logo {
  float: right;
  width: 45px;
  height: auto !important;
  margin-right: 15px !important;
  margin-top: -50px;
}

#header-logo {
  float: right;
  width: 45px;
  height: auto !important;
  margin-right: 15px !important;
  margin-top: -61px;
}

/* CSS for green bar on header */
.blog-title {
  background-color: #00823e;
	color: white !important;
  font-size: 16pt !important;
  font-weight: bold !important;
	font-family:  'Helvetica' !important;
	border: none !important;
  /*width: 100%;*/
	padding: 13px 50px 13px 13px !important;
}

/* CSS for main title on header */
.blog-title a {
  color: white;
  text-decoration: none;
}

/* CSS for sub-title on header */
.header-selection {
  color: white;
  font-family: 'Helvetica';
  font-size: 13pt !important;
  font-weight: normal !important;
  border: none !important;
  padding-right: 25px;
}

/****************
*    Footer     *
****************/

.blog-footer {
  padding-left: 20px !important;
  padding-right: 15px !important;
  font-family: sans-serif;
  font-size: 8pt;
  text-align: center;
}

.blog-footer a {
  text-decoration: none;
}

.blog-footer p:last-child {
  margin-bottom: 0px;
}

.footer-text {
  max-width: 500px !important;
  text-align: center !important;
  padding-left: 35px;
  padding-right: 35px;
  display: inline-block;
  /*position: relative;*/
}

#foot-img {
  width: auto;
  height: auto;
  max-height: 50px;
  margin-right: 15pt;
}

/****************
*    Content    *
****************/

/* CSS for home page menu titles */
.blog-post-title {
  margin-left: 40px;
  margin-top: -6px;
  font-family: 'Helvetica' !important;
  font-size: 11pt;
  right: 10px;
  position: absolute;
}

.blog-post-title a {
  font-size: 13pt;
  font-weight: bold;
  font-family: 'Helvetica' !important;
  color: #1E2D5F;
  text-decoration: none;
  left: 110px;
  margin-top: 24px;
  margin-right: 25px;
  position: absolute;
}

/* CSS for non-home page sub-titles */
.sub-title {
  margin-left: 40px;
  margin-top: -6px;
  font-family: 'Helvetica' !important;
  font-size: 11pt;
}

.sub-title a {
  font-size: 13pt;
  font-weight: bold;
  font-family: 'Helvetica' !important;
  color: #1E2D5F;
  text-decoration: none;
  left: 40px;
  margin-top: 24px;
  margin-right: 25px;
  position: absolute;
}

/* CSS for grey line between menu titles */
.divider {
  position: absolute;
  width: 100%;
  margin-left: 40px;
  margin-right: 40px;
  margin-top: 89px;
  border-bottom: 1px solid #BEBEBE;
}

/* CSS for grey arrows */
.material-icons {
  position: absolute;
  right: 0;
  margin-right: 46px;
  margin-top: 1080px;
  display: inline-block;
  padding-left: 15px !important;
	/*color: #BEBEBE;*/
  color: red;
}

/****************
*     Icons     *
****************/

.container {
  position: relative;
}

.st1 {
  position: absolute;
  top: 0px;
  margin-left: 42px;
  margin-top: 1.4em;
}

.st2 {
  position: absolute;
  top: 0px;
  margin-left: 43px;
  margin-top: 6.05em;
}

.st3 {
  position: absolute;
  top: 0px;
  margin-left: 43px;
  margin-top: 10em;
}

.st4 {
  position: absolute;
  top: 0px;
  margin-left: 43px;
  margin-top: 14.7em;
}

.st5 {
  position: absolute;
  top: 0px;
  margin-left: 45px;
  margin-top: 19.6em;
}
.st6 {
  position: absolute;
  top: 0px;
  margin-left: 47px;
  margin-top: 23.9em;
}

.st7 {
  position: absolute;
  top: 0px;
  margin-left: 47px;
  margin-top: 28.5em;
}

.st8 {
  position: absolute;
  top: 0px;
  margin-left: 45px;
  margin-top: 33.3em;
}

.st9 {
  position: absolute;
  top: 0px;
  margin-left: 47px;
  margin-top: 37.4em;
}

.st10 {
  position: absolute;
  top: 0px;
  margin-left: 45px;
  margin-top: 42em;
}

.st11 {
  position: absolute;
  top: 0px;
  margin-left: 46px;
  margin-top: 46.3em;
}

.st12 {
  position: absolute;
  top: 0px;
  margin-left: 45px;
  margin-top: 51em;
}

@media screen and (max-width: 571px) {
    .st12 {
      margin-top: 1060px;
    }
}

@media screen and (max-width: 486px) {


  .st12 {
    margin-top: 1060px;
  }
}

@media screen and (max-width: 400px) {
  .st12 {
    margin-top: 1054px;
  }
}
Contact GitHub API Training Shop Blog About

